--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.security.user.name=foo
-spring.security.user.password=foo
+spring.jpa.hibernate.ddl-auto=create
+jwt.secret=orbisfn
+spring.datasource.url=jdbc:mysql://localhost:3306/orbisfn
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.platform=mysql
